src/components/Editor/Tabs.css
.source-header {
  border-bottom: 1px solid var(--theme-splitter-color);
  width: 100%;
  height: 30px;
  display: flex;
  justify-content: space-between;
  align-items: flex-end;
}

.source-header * {
  -moz-user-select: none;
  user-select: none;
}

.source-header .new-tab-btn {
  padding: 0px 4px;
  margin-top: 8px;
  cursor: pointer;
  fill: var(--theme-comment);
  transition: 0.1s ease;
  align-self: center;
}

.source-header .new-tab-btn svg {
  width: 12px;
}

.source-tabs {
  max-width: calc(100% - 80px);
  align-self: flex-start;
}

.source-tab {
  color: var(--theme-faded-tab-color);
  border: 1px solid transparent;
  border-top-left-radius: 2px;
  border-top-right-radius: 2px;
  height: 26px;
  display: inline-flex;
  position: relative;
  transition: all 0.25s ease;
  min-width: 40px;
  overflow: hidden;
  padding-top: 4px;
  padding-inline-start: 12px;
  padding-inline-end: 20px;
  margin-inline-start: 8px;
  margin-top: 6px;
}

html[dir="ltr"] .source-tab:hover,
html[dir="rtl"] .source-tab:hover {
  background-color: var(--theme-toolbar-background-alt);
  border-color: var(--theme-splitter-color);
  cursor: pointer;
}

html[dir="ltr"] .source-tab.active,
html[dir="rtl"] .source-tab.active {
  color: var(--theme-body-color);
  background-color: var(--theme-body-background);
  border-color: var(--theme-splitter-color);
  border-bottom-color: transparent;
}

.source-tab path {
  fill: var(--theme-faded-tab-color);
}

.source-tab.active path {
  fill: var(--theme-body-color);
}

.source-tab .prettyPrint {
  display: block;
  position: absolute;
  top: 3px;
  left: 6px;
}

.source-tab .prettyPrint svg {
  height: 1em;
  width: 1em;
}

.source-tab .prettyPrint path {
  fill: var(--theme-textbox-box-shadow);
}

.source-tab .filename {
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.source-tab.pretty .filename {
  padding-left: 12px;
}

.source-tab .close-btn {
  top: 3px;
  offset-inline-end: 4px;
  visibility: hidden;
}

html[dir="ltr"] .source-tab:hover .close-btn,
html[dir="rtl"] .source-tab:hover .close-btn {
  visibility: visible;
}

.source-tab .close-btn .close {
  padding: 0;
  margin-top: 0;
  line-height: 0;
  line-height: 13px;
  display: inline-block;
}

